backend improve tests